--- a/index.html
+++ b/index.html
@@ -4,17 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pulse AI - Hospital CRM Platform</title>
+
     <meta name="description" content="Complete hospital CRM platform for managing appointments, prescriptions, and patient care" />
     <meta name="author" content="Pulse AI" />
 
+    <!-- OpenGraph -->
     <meta property="og:title" content="Pulse AI - Hospital CRM Platform" />
     <meta property="og:description" content="Complete hospital CRM platform for managing appointments, prescriptions, and patient care" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/opengraph.png" /> <!-- Replace with your own image -->
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@PulseAI" />
+    <meta name="twitter:image" content="/opengraph.png" /> <!-- Replace with your own image -->
   </head>
 
   <body>
@@ -22,3 +25,4 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
